<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center"

    tools:context=".MainActivity">

    <TextView
        android:id="@+id/heading"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/merriweather_black"
        android:text="BANKING APP"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/login_email"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/heading"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/quicksand_bold"
        android:hint="E-mail address"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/login_pass"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_email"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/quicksand_bold"
        android:hint="Password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_pass"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/quicksand_bold"
        android:onClick="On_Login_Click"
        android:text="Login" />

    <TextView
        android:id="@+id/Register_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/quicksand_bold"
        android:gravity="center"
        android:text="Don't have an account?Register now"
        android:onClick="Go_to_register"
        android:textSize="15sp" />

</RelativeLayout>